--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "chalk": "^1.1.1",
     "mongoose": "^4.2.4",
+    "prettyjson": "^1.1.3",
     "restify": "^4.0.3"
   },
   "scripts": {
